--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,12 @@
 
+.col {
+  width: 100%;
+  display: block;
+  height: 100%;
+}
+.four-col {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 20px;
+}
 
-/*
-Copyright Google LLC. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at https://angular.io/license
-*/
