--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <h1>{{title}}</h1>
+<div class="content four-col">
+  <div class="col"> 
 <app-heroes></app-heroes>
-
+  </div>
+</div>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
