--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -1,73 +1,37 @@
-/* HeroesComponent's private CSS styles */
-.heroes {
-  margin: 0 0 2em 0;
-  list-style-type: none;
-  padding: 0;
-  width: 15em;
-}
 
-.heroes li {
-  display: flex;
-}
-
-.heroes button {
-  flex: 1;
-  cursor: pointer;
-  position: relative;
-  left: 0;
-  background-color: #EEE;
-  margin: .5em;
-  padding: 0;
-  border-radius: 4px;
-  display: flex;
+.portfolio-items {
+  display: grid;
+  grid-template-columns: 52px 90px 36px;
+  gap: 10px;
   align-items: stretch;
-  height: 1.8em;
+  border-top: 1px solid #000;
+}
+.portfolio-items:last-child {
+  border-bottom: 1.5px solid #000;
 }
 
-.heroes button:hover {
-  color: #2c3a41;
-  background-color: #e6e6e6;
-  left: .1em;
+.img-responsive {
+  max-width: 100%;
+  width: 100%;
+  display: block;
+  height: 100%;
+  padding: 0;
+  margin: 0;
 }
-
-.heroes button:active {
-  background-color: #525252;
-  color: #fafafa;
+.icon {
+  height: 50px;
+  width: 50px;
+  display: block;
 }
-
-.heroes button.selected {
-  background-color: black;
-  color: white;
+.detail {
+  display: grid;
+  align-items: center;
 }
-
-.heroes button.selected:hover {
-  background-color: #505050;
-  color: white;
+.values {
+  background: #727337;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-weight: 600;
 }
-
-.heroes button.selected:active {
-  background-color: black;
-  color: white;
-}
-
-.heroes .badge {
-  display: inline-block;
-  font-size: small;
-  color: white;
-  padding: 0.8em 0.7em 0 0.7em;
-  background-color: #405061;
-  line-height: 1em;
-  margin-right: .8em;
-  border-radius: 4px 0 0 4px;
-}
-
-.heroes .name {
-  align-self: center;
-}
-
-
-/*
-Copyright Google LLC. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at https://angular.io/license
-*/
