--- a/src/styles.css
+++ b/src/styles.css
@@ -82,8 +82,39 @@ input[type="text"] {
 }
 
 
-/*
-Copyright Google LLC. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at https://angular.io/license
-*/
+.portfolio-items {
+  display: grid;
+  grid-template-columns: 52px 90px 36px;
+  gap: 10px;
+  align-items: stretch;
+  border-top: 1px solid #000;
+}
+.portfolio-items:last-child {
+  border-bottom: 1.5px solid #000;
+}
+
+.img-responsive {
+  max-width: 100%;
+  width: 100%;
+  display: block;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+}
+.icon {
+  height: 50px;
+  width: 50px;
+  display: block;
+}
+.detail {
+  display: grid;
+  align-items: center;
+}
+.values {
+  background: #727337;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-weight: 600;
+}
