--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,9 @@
 <div class="content four-col">
   <div class="col"> 
 <app-heroes></app-heroes>
+<app-heroes></app-heroes>
+<app-heroes></app-heroes>
+<app-heroes></app-heroes>
   </div>
 </div>
 
