--- a/src/styles.css
+++ b/src/styles.css
@@ -1,120 +1,195 @@
-/* Global Styles */
-* {
-  font-family: Arial, Helvetica, sans-serif;
-}
-h1 {
-  color: #264D73;
-  font-size: 2.5rem;
-}
-h2, h3 {
-  color: #444;
-  font-weight: lighter;
-}
-h3 {
-  font-size: 1.3rem;
-}
-body {
-  padding: .5rem;
-  max-width: 1000px;
-  margin: auto;
-}
-@media (min-width: 600px) {
-  body {
-    padding: 2rem;
+*{
+  box-sizing: border-box;   
   }
-}
-body, input[text] {
-  color: #333;
-  font-family: Cambria, Georgia, serif;
-}
-a {
-  cursor: pointer;
-}
-button {
-  background-color: #eee;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  color: black;
-  font-size: 1.2rem;
-  padding: 1rem;
-  margin-right: 1rem;
-  margin-bottom: 1rem;
-  margin-top: 1rem;
-}
-button:hover {
-  background-color: black;
-  color: white;
-}
-button:disabled {
-  background-color: #eee;
-  color: #aaa;
-  cursor: auto;
-}
-
-/* Navigation link styles */
-nav a {
-  padding: 5px 10px;
-  text-decoration: none;
-  margin-right: 10px;
-  margin-top: 10px;
-  display: inline-block;
-  background-color: #e8e8e8;
-  color: #3d3d3d;
-  border-radius: 4px;
-}
-
-nav a:hover {
-  color: white;
-  background-color:  #42545C;
-}
-nav a.active {
-  background-color: black;
-  color: white;
-}
-hr {
-  margin: 1.5rem 0;
-}
-input[type="text"] {
-  box-sizing: border-box;
-  width: 100%;
-  padding: .5rem;
-}
-
-
-.portfolio-items {
-  display: grid;
-  grid-template-columns: 52px 90px 36px;
-  gap: 10px;
-  align-items: stretch;
-  border-top: 1px solid #000;
-}
-.portfolio-items:last-child {
-  border-bottom: 1.5px solid #000;
-}
-
-.img-responsive {
-  max-width: 100%;
-  width: 100%;
-  display: block;
-  height: 100%;
-  padding: 0;
+  
+  body{
+  background:#525659;
+  width:100%;
+  height:100vh;
+  margin:0px;
+  padding:0px;
+  }
+  .container {
+  background: #fff;
+   width: 1056px;
+   padding: 0px 48px;
+  }
+  .header{
+  margin: 70px 0px 23px 0px;
+  }
+  .header h2{
+  font-size: 21px;
+  font-weight: 600;
   margin: 0;
+  }
+  .header h6{
+  font-size: 12px;
+  margin-top: 3px;
+  }
+  .main-section {
+  display: grid;
+   grid-template-columns: 115px 1fr;
+  }
+  .main-section  h4{
+  font-size: 19px;
+  border-bottom: 2px solid #000;
+  padding: 0px 0px 3px 0px;
+  }
+  .sustainable-list-items .list-group  {
+  list-style-type: none;
+  margin: 0px 0px 0px 0px;
+  background:#223b77;
+  color:#fff;
+  padding: 0px 6px;
+  border-radius:0; 
+  }
+  .sustainable-list-items .list-group li {
+  display:grid;
+  font-size: 12px;
+  gap: 14px 24px;
+  grid-template-columns: 347px 214px 108px;
+  position: relative;
+  } 
+  .sustainable-list-items .list-group li:first-child .heading{
+  font-size: 16px;
+  font-weight: 600;
+  }
+  .percentage-of{
+  border-bottom:1px solid #fff;
+  text-align:right;
+  }
+  .percentage-of span{
+  padding-left:20px;
+  }
+  .total-value{
+  font-size: 14px;
+  font-weight: 600;
+  }
+  .total-value.strong{
+  font-size: 20px;
+  font-weight: 600;
+  position: absolute;
+  top: -5px;
+  right: 19px;
+  }
+ .details-report {
+  display: grid;
+  grid-template-columns: 183px 1fr;
+  gap: 11px;
+  margin: 12px 0px 14px 0px;
+  }
+  .details-report-leftcol{
+  border-right:1px solid #000;
+  }
+  .details-report-leftcol h6{
+  font-size: 12px;
+  margin: 0;
+  font-weight: 600;
+  }
+  .details-report-leftcol ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-size: 12px;
+  }
+  .details-report-leftcol ul li:before { content: "\005F";}
+  .details-report-leftcol ul li{
+  font-size: 12px;
+  padding-left: 2px;
+  }
+  .details-report-rightcol ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  font-size: 12px;
+  }
+  .details-report-rightcol ul li{
+  display: grid;
+  grid-template-columns: 97px 1fr;
+  padding-bottom: 10px;
+  gap: 0px;
+  }
+  .details-report-rightcol ul li span.title{
+  font-size: 14px;
+  font-weight: 600;
+  }
+  .details-report-rightcol ul li span {
+  font-size: 12px;
+  }
+  
+  .sub-header{
+  margin: 50px 0px 0px 0px;
+  }
+  .sub-header h2{
+  font-size: 12px;
+   font-weight: 600;
+   border-bottom: 2px solid #000;
+ }
+ .details-report-rightcol li .policy-block{
+ display:block;
+ padding: 3px 0px 10px 0px;
+ }
+ 
+ 
+ .main-container{
+  display: grid;
+  grid-template-columns: 1fr 230px;
+  gap:10px;
+ }
+ .main-container h4{ 
+ font-size: 14px;
+   border-bottom: 1px solid #000;
+   margin-bottom: 6px;
+ }
+ .main-container .content {
+     padding-bottom: 78px;
+   }
+ .left-container{
+ font-size: 12px;
+ }
+ .right-container{
+ background: #eff2f7;
+   padding: 0px;
+   text-align: center;
+   font-size: 12px;
+ }
+ .four-col {
+  display:grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap:20px;
+ }
+ .portfolio-items {
+   display: grid;
+   grid-template-columns: 52px 90px 36px;
+   gap: 10px;
+   align-items: stretch;
+   border-top: 1px solid #000;
+}
+.portfolio-items:last-child{
+border-bottom: 1.5px solid #000;
+}
+.img-responsive {
+max-width:100%;
+width:100%;
+dispaly:block;
+height:100%;
+padding:0;
+margin:0;
 }
 .icon {
-  height: 50px;
-  width: 50px;
-  display: block;
+   height: 50px;
+   width: 50px;
+   display: block;
 }
 .detail {
-  display: grid;
-  align-items: center;
+   display: grid;
+   align-items: center;
 }
 .values {
-  background: #727337;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-  font-weight: 600;
+   background: #727337;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   color: #fff;
+   font-weight: 600;
 }
