2 files modified, 5 added, 5 deleted

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
 <h1>{{title}}</h1>
-<div class="content four-col">
-  
-<app-heroes></app-heroes>
-<app-heroes></app-heroes>
-<app-heroes></app-heroes>
-<app-heroes></app-heroes>
-
+<div class="content four-col">  
+<app-portfolio></app-portfolio>
+<app-portfolio></app-portfolio>
+<app-portfolio></app-portfolio>
+<app-portfolio></app-portfolio>
 </div>
 
