4 files modified, 3 added

--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-
+<app-icon [iconUrl]="iconData.url" [altText]="iconData.alt"></app-icon>
 <div class="col" *ngFor="let portfolio of portfolio" > 
 <div class="portfolio-items" >
   <div class="icon"><img src="{{portfolio.icon}}" alt="corporate" class="img-responsive"/></div>
