--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <h1>{{title}}</h1>
 <div class="content four-col">  
-<app-portfolio></app-portfolio>
-<app-portfolio></app-portfolio>
-<app-portfolio></app-portfolio>
-<app-portfolio></app-portfolio>
+<app-portfolio [portfolio]="portfolio"></app-portfolio>
+<app-portfolio [portfolio]="portfolio2"></app-portfolio>
+
 </div>
 
