--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,8 +1,10 @@
-<app-icon [iconUrl]="iconData.url" [altText]="iconData.alt"></app-icon>
-<div class="col" *ngFor="let portfolio of portfolio" > 
-<div class="portfolio-items" >
-  <div class="icon"><img src="{{portfolio.icon}}" alt="corporate" class="img-responsive"/></div>
-  <div class="detail">{{portfolio.content}}</div>
-  <div *ngIf="portfolio.values !== 0" class="">{{portfolio.values}} </div> 
-</div>
+<!-- <app-icon [iconUrl]="iconData.url" [altText]="iconData.alt"></app-icon> -->
+<div class="col" *ngFor="let portfolio of portfolio">
+  <div class="portfolio-items">
+    <div class="icon">
+      <img src="{{ portfolio.icon }}" alt="corporate" class="img-responsive" />
+    </div>
+    <div class="detail">{{ portfolio.content }}</div>
+    <div *ngIf="portfolio.values !== 0" class="">{{ portfolio.values }}</div>
+  </div>
 </div>
