--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>{{title}}</h1>
 <div class="content four-col">  
-<app-portfolio [portfolio]="iconData"></app-portfolio>
-<!-- <app-portfolio [portfolio]="portfolio2"></app-portfolio> -->
+<app-portfolio [portfolio]="portfolio"></app-portfolio>
+<app-portfolio [portfolio]="portfolio2"></app-portfolio>
 </div>
 
